<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ismail.creatvt.passguard.viewpassword.ViewPasswordViewModel" />

        <variable
            name="owner"
            type="androidx.lifecycle.LifecycleOwner" />

        <import type="android.view.View" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="80dp"
            android:clipChildren="false"
            android:clipToPadding="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".viewpassword.ViewPasswordActivity">

                <com.ismail.creatvt.passguard.InfoView
                    android:id="@+id/websiteView"
                    style="@style/Widget.Material3.CardView.Outlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:label="@{@string/website}"
                    android:text="@{viewModel.password.website.name}"
                    app:confidential="@{false}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <com.ismail.creatvt.passguard.InfoView
                    android:id="@+id/websiteNameView"
                    style="@style/Widget.Material3.CardView.Outlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="@{viewModel.shouldShowOtherName ? View.VISIBLE : View.GONE}"
                    android:label="@{@string/website_name}"
                    android:text="@{viewModel.password.website.otherName}"
                    app:confidential="@{false}"
                    app:layout_constraintEnd_toEndOf="@id/websiteView"
                    app:layout_constraintStart_toStartOf="@id/websiteView"
                    app:layout_constraintTop_toBottomOf="@+id/websiteView" />

                <com.ismail.creatvt.passguard.InfoView
                    android:id="@+id/usernameView"
                    style="@style/Widget.Material3.CardView.Outlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:label="@{@string/username}"
                    android:text="@{viewModel.password.username}"
                    app:confidential="@{false}"
                    app:layout_constraintEnd_toEndOf="@id/websiteView"
                    app:layout_constraintStart_toStartOf="@id/websiteView"
                    app:layout_constraintTop_toBottomOf="@id/websiteNameView" />

                <com.ismail.creatvt.passguard.InfoView
                    android:id="@+id/passwordView"
                    style="@style/Widget.Material3.CardView.Outlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:label="@{@string/password}"
                    android:text="@{viewModel.password.password}"
                    app:confidential="@{true}"
                    app:layout_constraintEnd_toEndOf="@+id/usernameView"
                    app:layout_constraintStart_toStartOf="@+id/usernameView"
                    app:layout_constraintTop_toBottomOf="@+id/usernameView"
                    app:onVisibilityRequest="@{viewModel::onViewPasswordRequest}"
                    app:textVisible="@{viewModel.passwordVisible}" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:visibility="@{viewModel.extraViewModels.empty ? View.GONE: View.VISIBLE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordView">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="32dp"
                        android:text="@string/extras"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView3"
                        app:lifecycleOwner="@{owner}"
                        app:viewExtras="@{viewModel.extraViewModels}" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="64dp"
                        android:layout_marginEnd="64dp"
                        android:background="@color/midGrey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/website_icon_background"
                    android:contentDescription="@{viewModel.password.website.name}"
                    android:padding="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/amazon"
                    app:websiteIcon="@{viewModel.password.website.icon}" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="@{(v)->viewModel.onEditClick()}"
            android:text="@string/edit"
            android:textSize="16sp"
            app:icon="@drawable/ic_baseline_edit_24"
            android:layout_gravity="bottom|end"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="@{viewModel::onDeleteClick}"
            android:text="@string/delete"
            android:textColor="#FF3636"
            android:textSize="16sp"
            app:icon="@drawable/ic_baseline_delete_24"
            app:iconTint="#FF3636"
            android:layout_gravity="bottom|start"/>
    </FrameLayout>
</layout>